--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "node": true,
+        "es2020": true
     },
     "extends": [
         "eslint:recommended",
