charsheet 2nd page OK

--- a/package.json
+++ b/package.json
@@ -28,14 +28,7 @@
     "server": "json-server --port 3001 --watch db.json --routes routes.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint . --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
@@ -48,9 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^8.25.0",
-    "eslint-plugin-react": "^7.31.10"
   }
 }
