--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "http-proxy-middleware": "^2.0.6",
     "mui-image": "^1.0.7",
     "node": "^18.10.0",
     "react": "^18.2.0",
@@ -45,6 +44,7 @@
   },
   "devDependencies": {
     "eslint": "^8.28.0",
-    "eslint-plugin-react": "^7.31.11"
+    "eslint-plugin-react": "^7.31.11",
+    "http-proxy-middleware": "^2.0.6"
   }
 }
